--- a/infraestruture/credentials.yaml
+++ b/infraestruture/credentials.yaml
@@ -7,4 +7,4 @@ type: Opaque
 stringData:
   MONGO_DB_USER: "admin"
   MONGO_DB_PASS: "password"
-  MONGO_DB_URI_EXTERNAL: "mongodb://admin:password@localhost:27017/database?authMechanism=DEFAULT&authSource=admin"
+  MONGO_DB_URI: "mongodb://admin:password@localhost:27017/database?authMechanism=DEFAULT&authSource=admin"
