--- a/infrastructure/backend.yaml
+++ b/infrastructure/backend.yaml
@@ -18,13 +18,21 @@ spec:
       containers:
       - name: backend
         image: kubernetes-practices-backend:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
         env:
         - name: PORT
           value: "3000"
         - name: MONGO_DB_URI
+          value: "mongodb://$(MONGO_DB_USER):$(MONGO_DB_PASS)@mongodb-service:27017/database?authMechanism=DEFAULT&authSource=admin"
+        - name: MONGO_DB_USER
           valueFrom: 
             secretKeyRef:
               name: credentials
-              key: MONGO_DB_URI
+              key: MONGO_DB_USER
+        - name: MONGO_DB_PASS
+          valueFrom: 
+            secretKeyRef:
+              name: credentials
+              key: MONGO_DB_PASS
